2009-09-25  Matthew Mundell <matthew.mundell@intevation.de>

	Add credential setup to openvas server interface.

	* misc/openvas_server.c (openvas_server_open): Turn off use of
	/dev/random.
	(openvas_server_close): Call gnutls_global_deinit.
	(openvas_server_session_new): Remove.  Renamed to openvas_server_new.  Add
	credential file args.  Turn off use of /dev/random.  Add global init.
	Setup credential from files.  Set request mode.
	(openvas_server_session_free): Remove.  Renamed to openvas_server_free.
	Call gnutls_global_deinit.
	(openvas_server_free, openvas_server_new): New functions, renamed from
	"session" versions.
	(openvas_server_attach): New function.

	* misc/openvas_server.h: Update and add headers.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Removed usage of harglist for file path translations, do not export
	harglist headers anymore.

	* Makefile: Do not export harglist headers anymore.

	* misc/plugutils.c (get_plugin_preference_fname): Use GHashTable instead
	of harglist.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* Makefile: Install headers from nasl to openvas/nasl.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* hg/Makefile: Install headers from hg to openvas/hg.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* Makefile: Install header of omp library to openvas/omp.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* misc/openvas_logging.h, misc/openvas_logging.c: Moved struct
	openvas_logging_t from header to implementation file.

2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Removed base/openvas_certificate module, replaced by base/certificate.

	* base/openvas_certificate.c, base/openvas_certificate.h: Removed.

	* Makefile: Do not install openvas_certificate header anymore.

	* base/CMakeLists.txt: Removed openvas_certificate from files list.

	* nasl/CMakeLists.txt: Added base as include dir; libopenvas_nasl