@@ -56,8 +56,8 @@ int
 openvas_server_sendf (gnutls_session_t*, const char*, ...);
 
 int
-openvas_server_new (gchar*, gchar*, gchar*, gnutls_session_t*,
-                    gnutls_certificate_credentials_t*);
+openvas_server_new (gnutls_connection_end_t, gchar*, gchar*, gchar*,
+                    gnutls_session_t*, gnutls_certificate_credentials_t*);
 
 int
 openvas_server_free (int,
